@@ -1,3 +1,6 @@
+2006-12-18  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/conffile.c: Print nothing if the list is emtpy.
+
 2006-12-14  Jean-Louis Martineau <martineau@zmanda.com>
 	* restore-src/restore.c: Fix filename for output file.
 
